--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="quiz">
 	    <label for="">operation<label>
-        <select id="operation">
+        <select name="" id="operation">
 		  <option value="add">Addition</option>
 		  <option value="sub">subraction</option>
 		  <option value="multiple">multiplication</option>
@@ -30,16 +30,13 @@
 	</div>
 	<div class="quiz">
 	    <button id="submit">submit</button>
+		 <button id="calculate" disabled>calculate</button>
+		
 	</div>
 	<div class="problems">
-	<div class="problem">
-	<h3>10</h3>
-	<h3>+</h3>
-	<h3>20</h3>
-	<input type="text" class="answer">
-	</div>
-	</div>
 
+	</div>
+	
 
   <script src="index.js"></script> 
 </body>
